--- a/spring_project/src/main/resources/application.properties
+++ b/spring_project/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.jpa.show-sql=true
 
 # 출력되는 쿼리 로그를 Mysql 버전으로 변경
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.h2.console.enabled=true
+
+# MLP 강의와 port 번호가 겹치므로 변경
+server.port=8081
