--- a/spring_project/build.gradle
+++ b/spring_project/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     // 별도의 설치 필요 없이 프로젝트 의존성만으로 관리 가능
     // 메모리에서 실행되기 때문에 애플리케이션을 재시작할 때마다 초기화된다는 점을 이용하여 테스트 용도로 많이 사용
     compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
