--- a/spring_project/src/main/resources/application-oauth.properties
+++ b/spring_project/src/main/resources/application-oauth.properties
@@ -1,3 +1,4 @@
 spring.security.oauth2.client.registration.google.client-id=120124805718-6bn5qbs4nnjlh7hibdt062g4ao6jlrqa.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
+test
