--- a/spring_project/src/main/resources/application-oauth.properties
+++ b/spring_project/src/main/resources/application-oauth.properties
@@ -2,3 +2,5 @@ spring.security.oauth2.client.registration.google.client-id=120124805718-6bn5qbs
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 test
+testtest
+test
