--- a/spring_project/build.gradle
+++ b/spring_project/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     // 소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    // 스프링 시큐리티 테스트 설정
+    testCompile('org.springframework.security:spring-security-test')
 }
